# Itcher

./: .gitignore  CMakeLists.txt  README.md
demo/: main.c
src/: auth_server.c  auth_server.h  config.h  itcher.c  itcher.h  logger.h  urlencode.c  urlencode.h  user.h
src/linux/: auth_server_linux.c
src/windows/: auth_server_win.cpp
